# Mainstay

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
contracts/asset-registry/src/: lib.rs
contracts/asset/src/: collateral_tests.rs
contracts/engineer-registry/src/: lib.rs
contracts/lending/: Cargo.toml
contracts/lending/src/: lib.rs
contracts/lending/tests/: lending_tests.rs  test_get_contract_balance.rs  test_set_max_loan_amount.rs  test_set_min_stake.rs  test_voucher_history.rs
contracts/lifecycle/src/: errors.rs  lib.rs  scoring.rs  types.rs
contracts/shared/src/: error.rs  lib.rs  validation.rs
docs/: architecture.md  asset-lifecycle.md  asset-search.md  collateral-scoring.md  deployment-runbook.md  error-reference.md  ttl-strategy.md
lifecycle/src/: errors.rs  fuzz_tests.rs  lib.rs
tests/: Cargo.toml  test_admin_timelock.rs  test_admin_transfer.rs  test_collateral_score_cap.rs  test_decay_clamps_at_zero.rs  test_depin_to_defi_e2e.rs  test_emergency_pause.rs  test_engineer_credential_expiry.rs  test_full_lifecycle_e2e.rs  test_lending_features.rs  test_loan_deadline.rs  test_multi_asset_collateral.rs  test_paused_contract.rs  test_submit_maintenance_fuzz.rs
